[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Graphics/UI/HPbar.png" type="Texture" id=2]
[ext_resource path="res://Sounds/SFX/Laser_Shoot5.wav" type="AudioStream" id=3]
[ext_resource path="res://Graphics/Actors/spaceship-01.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Objects/EnemyBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Objects/Collectible.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 180.0

[sub_resource type="CircleShape2D" id=3]

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 513
script = ExtResource( 1 )
bullet = ExtResource( 5 )
collectible = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.556863, 0.956863, 0.160784, 1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="BulletSpawner" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="Timer" type="Timer" parent="."]

[node name="HP_Bar" type="TextureProgress" parent="."]
margin_left = -13.0
margin_top = -1.0
margin_right = 115.0
margin_bottom = 127.0
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_progress = Color( 0.054902, 0.74902, 0.356863, 1 )
radial_initial_angle = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotSound" type="AudioStreamPlayer" parent="." groups=[
"SFX",
]]
stream = ExtResource( 3 )
volume_db = -80.0

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
